syntax = "proto3";

package pb;

import "language.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb";

message CreateLanguageRequest { repeated LanguageRequest languages = 1; }

message CreateLanguageResponse { repeated LanguageResponse languages = 1; }